[package]
name = "type_sorts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3"
rayon = "1.7"
crossbeam = "0.8"
sort_utils = { path = "../sort_utils" }
fastrand = "2.0.1"
rand_xorshift = "0.3.0"
